--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.cyberpwn</groupId>
-  <artifactId>JSON</artifactId>
-  <version>1.0</version>
-  <name>JSON</name>
-  <description>It's json. And it isnt full of bloatware.</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.cyberpwn</groupId>
+	<artifactId>JSON</artifactId>
+	<version>1.0</version>
+	<name>JSON</name>
+	<description>It's json. And it isnt full of bloatware.</description>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<github.maven.repository>file://C:\Users\cyberpwn\Documents\development\repository</github.maven.repository>
+	</properties>
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>https://raw.githubusercontent.com/cyberpwnn/Central/master/</url>
+		</repository>
+	</repositories>
+	<distributionManagement>
+		<repository>
+			<id>central</id>
+			<url>${github.maven.repository}</url>
+		</repository>
+	</distributionManagement>
 </project>
